// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Styles/MaxWidth > handles % value 1`] = `
{
  "classNames": [
    "_root_a7cdf6",
    [
      "_--type-literal_a7cdf6",
    ],
  ],
  "variables": {
    "--rs-max-w-s": "50%",
  },
}
`;

exports[`Styles/MaxWidth > handles px value 1`] = `
{
  "classNames": [
    "_root_a7cdf6",
    [
      "_--type-literal_a7cdf6",
    ],
  ],
  "variables": {
    "--rs-max-w-s": "50px",
  },
}
`;

exports[`Styles/MaxWidth > handles responsive value 1`] = `
{
  "classNames": [
    "_root_a7cdf6",
    [
      "_--type-literal_a7cdf6",
      "_--type-literal--l_a7cdf6",
    ],
  ],
  "variables": {
    "--rs-max-w-l": "50%",
    "--rs-max-w-s": "50px",
  },
}
`;

exports[`Styles/MaxWidth > handles undefined value 1`] = `null`;

exports[`Styles/MaxWidth > handles unit value 1`] = `
{
  "classNames": [
    "_root_a7cdf6",
    [
      "_--type-unit_a7cdf6",
    ],
  ],
  "variables": {
    "--rs-max-w-s": 5,
  },
}
`;
